<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:res-auto="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activit.MainActivity">

    <RelativeLayout
        android:id="@+id/baseContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/actionBar"
            android:layout_width="match_parent"
            android:layout_height="61dp">

            <ImageView
                android:id="@+id/kidsImageView"
                android:layout_width="112dp"
                android:layout_height="32dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="14dp"
                android:layout_marginLeft="14dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/logo" />
        </RelativeLayout>

        <com.example.islamicapp.CustomView.SKviewPager
            android:id="@+id/fragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/navigation"
            android:layout_below="@+id/actionBar" />

        <LinearLayout
            android:id="@+id/navigation"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bottom_bg"
            android:orientation="horizontal"
            android:weightSum="3">

            <LinearLayout
                android:id="@+id/streamLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgStream"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:contentDescription="@string/app_name"
                    res-auto:srcCompat="@drawable/play" />

                <com.example.islamicapp.CustomView.SKtextViewAladin
                    android:id="@+id/streamTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/home"
                    android:textColor="@color/white_color"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/prgramsLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgPrograms"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:contentDescription="@string/app_name"
                    res-auto:srcCompat="@drawable/programe" />

                <com.example.islamicapp.CustomView.SKtextViewAladin
                    android:id="@+id/programsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/schedule"
                    android:textColor="@color/white_color"
                    android:textSize="11sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/aboutLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgAbout"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:contentDescription="@string/app_name"
                    res-auto:srcCompat="@drawable/about" />

                <com.example.islamicapp.CustomView.SKtextViewAladin
                    android:id="@+id/aboutTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/about"
                    android:textColor="@color/white_color"
                    android:textSize="11sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>