<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.example.islamicapp.CustomView.SKtextViewRobotoRegular
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="14dp"
            android:gravity="center"
            android:lineSpacingExtra="12sp"
            android:text="@string/title"
            android:textColor="#ffffffff"
            android:textSize="14sp" />

        <com.example.islamicapp.CustomView.SKtextViewRobotoThin
            android:id="@+id/txtDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtTitle"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="14dp"
            android:gravity="center"
            android:lineSpacingExtra="9sp"
            android:text="@string/content"
            android:textColor="#ffffffff"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtDescription"
            android:gravity="center"
            android:orientation="vertical">

            <com.example.islamicapp.CustomView.SKtextViewRobotoThin
                android:id="@+id/mEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:textColor="@color/white_color"
                android:textSize="13sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="80dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="5">

                <ImageView
                    android:id="@+id/facebook"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    android:src="@mipmap/ic_launcher" />

                <ImageView
                    android:id="@+id/website"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    android:src="@mipmap/ic_launcher" />

                <ImageView
                    android:id="@+id/youtube"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    android:src="@mipmap/ic_launcher" />

                <ImageView
                    android:id="@+id/twitter"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    android:src="@mipmap/ic_launcher" />

                <ImageView
                    android:id="@+id/instagram"
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/app_name"
                    android:src="@mipmap/ic_launcher" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>